deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "26"
  labels:
    app: console
  name: console
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: console
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: console
    spec:
      containers:
      - args:
        - /opt/bridge/bin/bridge
        - --public-dir=/opt/bridge/static
        - --listen=http://0.0.0.0:9000
        - --v=8
        - --k8s-auth=oidc
        - --user-auth=oidc
        - --user-auth-oidc-issuer-url=https://auth.dev-ops.kz/realms/kubernetes
        - --user-auth-oidc-client-id=kubernetes
        - --user-auth-oidc-client-secret=cQaeSfDbbgMKBDatBnA1SmQglxGo8c8T
        - --base-address=https://console.altyn-i.kz
        - --branding=openshift
        image: quay.io/openshift/origin-console:4.12
        imagePullPolicy: IfNotPresent
        name: console
        ports:
        - containerPort: 9000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      hostAliases:
      - hostnames:
        - auth.dev-ops.kz
        ip: 192.168.1.151
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-03-30T13:18:17Z"
    lastUpdateTime: "2024-03-30T13:18:17Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-03-29T16:57:30Z"
    lastUpdateTime: "2024-03-30T14:16:32Z"
    message: ReplicaSet "console-647df77577" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 26
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
