service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: console
  name: console
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
    nodePort: 30030
  selector:
    app: console
  type: NodePort
status:
  loadBalancer: {}
