route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: console
  name: console
  namespace: default
spec:
  host: console.nurlan.kz
  path: /
  port:
    targetPort: 9000
  to:
    kind: Service
    name: console
  wildcardPolicy: None
